2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>

    * testsuite/runtest.libs/target.test: Rename fake "target_info"
    array to a fake "board_info" array, to align with changes made to
    the DejaGnu core on 29 January 1997 that moved the target
    configuration data into the global board_info array.

    * testsuite/runtest.libs/remote.test: Likewise.

2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>

    * testsuite/runtest.libs/libs.exp: Use runtest_file_p to honor
    requests to run only some library tests.

2020-05-18  Rob Savoye  <rob@senecass.com>

	* configure.ac: Extract the current branch.
	* Makefile.am: Change the frame_version in runtest.exp post
	install to add the branch and git revision to make it easier to
	support multiple versions during development.

2020-05-15  Rob Savoye  <rob@senecass.com>

	* All files: Minor change, update copyright dates.

2019-03-08  Andrew Burgess  <andrew.burgess@embecosm.com>

    * runtest.exp (search_and_load_file): Join the directory and
	filename once using 'file join'.

2019-01-24  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi: Refill paragraphs and normalize inter-sentence
	spacing so the Emacs move-by-sentence commands work correctly.

2019-01-23  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Replace "config file" with "configuration
	file" throughout.

2019-01-23  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (Command line option variables): Improve table
	formatting to fix overlapping columns and revise text slightly.

2019-01-23  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (Global config file): Change example to use the
	Tcl "switch" command instead of the deprecated "case" command.

2019-01-12  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (runtest_file_p procedure): Fix description of
	the structure of the "runtests" argument.

2019-01-12  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Various documentation fixes.
